# MonitorMe

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/nsight_compute/: node1_gpu_lab_phase20_profile_plan.json
configs/prometheus/: monitorme_operator_dashboard.yml
docs/: API.md  ARCHITECTURE.md  ASSISTANT_FACT_GUARD.md  EVIDENCE_MODEL.md  GITHUB_SETUP.md  IMPLEMENTATION_STEPS.md  MAX_GEMMA_NODE1.md  MODEL_SETUP.md  NODE1_AI_CAMERA_ASSISTANT_V0_1.md  NODE1_AI_CAMERA_ASSISTANT_V0_2.md  NODE1_AI_CAMERA_ASSISTANT_V0_3.md  NODE1_AI_CAMERA_ASSISTANT_V0_4.md  NODE1_AI_CAMERA_ASSISTANT_VALIDATION.md  NODE1_LOCAL_CAMERA.md  NODE1_NON_LLM_GPU_INFERENCE_LAB.md  ROADMAP.md  STEP17B_NODE1_C922_REAL_CAPTURE.md  STEP17C_YOLO_ONNX_DETECTION.md  STEP17D_DETECTOR_HEALTH.md  STEP17E_EVIDENCE_OVERLAYS.md  VALIDATION.md  VALIDATION_RESULTS.md
migrations/: 001_initial.sql  002_node1_assistant_v01.sql  003_node1_assistant_v03.sql  004_node1_assistant_v04.sql  005_evidence_index_persistence.sql  006_evidence_index_retention.sql  007_evidence_retention_schedule.sql  008_evidence_index_rebuild.sql
monitor_me/: __init__.py  assistant.py  assistant_summary.py  camera_devices.py  capture_policy.py  cli.py  db.py  detector_health.py  event_contract.py  event_tools.py  evidence_pack.py  fact_guard.py  grafana_dashboard.py  hash_utils.py  ids.py  keyframe_vlm.py  llm_client.py  local_capture.py  model_registry.py  non_llm_gpu_lab.py  operator_dashboard.py  overlays.py  policy.py  report_tools.py  routes.py  schemas.py  short_clip_vlm.py  smolvlm2_client.py  time_utils.py  tracker_tools.py  translation_tools.py  vlm_client.py  yolo_client.py  yolo_onnx.py
native/node1_non_llm_gpu_inference_lab/: CMakeLists.txt  README.md
native/node1_non_llm_gpu_inference_lab/include/node1_non_llm/: audiobox.hpp  dense_full_frame.hpp  evidence_pipeline.hpp  gpu_lab.hpp  gpu_lab_cuda_utils.cuh  gpu_lab_json.hpp  gpu_lab_timing.hpp  gpu_lab_types.hpp  isp_filters.hpp  mixed_region.hpp  overlay_heavy.hpp  sparse_roi.hpp  storage_batch.hpp
native/node1_non_llm_gpu_inference_lab/scripts/: build_node1_gpu_lab.sh  profile_node1_gpu_lab_nsight_compute.py  profile_node1_gpu_lab_nsight_compute.sh  run_node1_gpu_lab_phase0_selftest.sh  run_node1_gpu_lab_phase10_capture_evidence_pipeline_selftest.sh  run_node1_gpu_lab_phase11_real_media_fingerprint_selftest.sh  run_node1_gpu_lab_phase12_evidence_index_selftest.sh  run_node1_gpu_lab_phase13_evidence_api_selftest.sh  run_node1_gpu_lab_phase14_evidence_retention_selftest.sh  run_node1_gpu_lab_phase15_operator_dashboard_selftest.sh  run_node1_gpu_lab_phase16_scheduled_retention_selftest.sh  run_node1_gpu_lab_phase17_evidence_rebuild_selftest.sh  run_node1_gpu_lab_phase18_operator_dashboard_charts_selftest.sh  run_node1_gpu_lab_phase19_grafana_dashboard_selftest.sh  run_node1_gpu_lab_phase1_isp_selftest.sh  run_node1_gpu_lab_phase20_nsight_compute_selftest.sh  run_node1_gpu_lab_phase2_isp_cuda_selftest.sh  run_node1_gpu_lab_phase3_sparse_roi_cuda_selftest.sh  run_node1_gpu_lab_phase3_sparse_roi_selftest.sh  run_node1_gpu_lab_phase4_mixed_region_cuda_selftest.sh  run_node1_gpu_lab_phase4_mixed_region_selftest.sh  run_node1_gpu_lab_phase5_dense_full_frame_cuda_selftest.sh  run_node1_gpu_lab_phase5_dense_full_frame_selftest.sh  run_node1_gpu_lab_phase6_overlay_heavy_cuda_selftest.sh  run_node1_gpu_lab_phase6_overlay_heavy_selftest.sh  run_node1_gpu_lab_phase7_audiobox_cuda_selftest.sh  run_node1_gpu_lab_phase7_audiobox_selftest.sh  run_node1_gpu_lab_phase8_storage_batch_selftest.sh  run_node1_gpu_lab_phase9_evidence_pipeline_selftest.sh  run_node1_gpu_lab_smoke.sh
native/node1_non_llm_gpu_inference_lab/src/: audiobox_cpu.cpp  dense_full_frame_cpu.cpp  evidence_pipeline_cpu.cpp  gpu_lab_cpu.cpp  gpu_lab_cuda.cu  gpu_lab_cuda_utils.cu  gpu_lab_json.cpp  gpu_lab_main.cpp  gpu_lab_selftest.cpp  gpu_lab_timing.cpp  gpu_lab_types.cpp  isp_filters_cpu.cpp  isp_pnm_io.cpp  mixed_region_cpu.cpp  overlay_heavy_cpu.cpp  sparse_roi_cpu.cpp  storage_batch_cpu.cpp
scripts/: run_api.sh  run_evidence_retention_scheduler_once.sh  start_api_background.sh  status_api.sh  stop_api.sh  validate_node1_ai_camera_assistant_v01.sh  validate_node1_ai_camera_assistant_v02.sh  validate_node1_ai_camera_assistant_v03.sh  validate_node1_ai_camera_assistant_v04.sh  validate_node1_ai_camera_assistant_v041.sh  validate_node1_c922_live.sh  validate_node1_c922_yolo_live.sh  validate_step17b_monitorme.sh  validate_step17c_monitorme.sh  validate_step17d_monitorme.sh  validate_step17e_monitorme.sh
scripts/max/: create_max_gemma3_1b_py312_env.sh  create_max_gemma3_1b_stable_py312_env.sh  create_max_gemma3_1b_stable_py312_with_mojo_env.sh  diagnose_max_gemma3_1b_env.sh  patch_max_pixi_activation_env.sh  (+4 more)
tests/: helpers.py  test_api_routes.py  test_assistant_grounding.py  test_camera_devices.py  test_cli.py  test_detector_health.py  test_event_normalization.py  test_evidence_overlays.py  test_evidence_pack_and_report.py  test_feedback_and_correlation.py  test_max_helper_health.py  test_node1_ai_camera_assistant_v01.py  test_node1_ai_camera_assistant_v02.py  test_node1_ai_camera_assistant_v03.py  test_node1_ai_camera_assistant_v04.py  test_node1_audiobox_phase7.py  test_node1_capture_evidence_pipeline_phase10.py  test_node1_capture_real_fingerprint_phase11.py  test_node1_dense_full_frame_phase5.py  test_node1_evidence_api_phase13.py  test_node1_evidence_index_phase12.py  test_node1_evidence_index_rebuild_phase17.py  test_node1_evidence_pipeline_phase9.py  test_node1_evidence_retention_phase14.py  test_node1_evidence_retention_schedule_phase16.py  test_node1_isp_filters_phase1.py  test_node1_isp_filters_phase2.py  test_node1_mixed_region_phase4.py  test_node1_non_llm_gpu_lab_phase0.py  test_node1_nsight_compute_phase20.py  test_node1_operator_dashboard_charts_phase17.py  test_node1_operator_dashboard_grafana_phase19.py  test_node1_operator_dashboard_phase15.py  test_node1_overlay_heavy_phase6.py  test_node1_sparse_roi_phase3.py  test_node1_storage_batch_phase8.py  test_yolo_detection_pipeline.py
(+5 files in other folders)
