[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monitorme"
version = "0.4.1"
description = "MonitorMe Node1 AI Camera Assistant v0.4 with Qwen keyframes and SmolVLM2 short clip experiments"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "MonitorMe Project"}]
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
camera = ["opencv-python>=4.9", "numpy>=1.26"]
detector = ["onnxruntime>=1.17"]
test = ["pytest>=8.0", "httpx2>=2.5.0"]
llm = []

[project.scripts]
monitorme = "monitor_me.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["monitor_me*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
